# bodhi-update-manager

./: .editorconfig  .gitignore  README.md  pyproject.toml  update-translations
bodhi_update/: app.py  dialogs.py  hold_controller.py  install_controller.py  prefs.py  refresh_controller.py  status_messages.py  tray.py  utils.py
data/applications/: bodhi-update-manager-tray.desktop  bodhi-update-manager-tray.in  bodhi-update-manager.desktop  bodhi-update-manager.in
data/libexec/: bodhi-update-manager-root
data/polkit/: org.bodhi.updatemanager.policy
data/systemd/: bodhi-update-manager-refresh.service  bodhi-update-manager-refresh.timer
debian/: bodhi-update-manager.lintian-overrides  changelog  control  copyright  install  postrm  rules  unify_locales  update_version
po/: LINGUAS  POTFILES.in  be.po  bodhi-update-manager.pot  ca.po  cs.po  de.po  el.po  en.po  es.po  fi.po  fr.po  he.po  hi.po  it.po  ml.po  mr.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po
src/: app.py  backend_ui_service.py  backends.py  hold_controller.py  install_commands.py  install_controller.py  prefs.py  refresh_controller.py  status_messages.py  tray.py
src/bodhi_update/: _version.py  app.py  backends.py  install_commands.py  models.py
src/bodhi_update/plugins/: apt.py
src/plugins/: __init__.py  apt.py  flatpak.py  snap.py
